--- a/index.css
+++ b/index.css
@@ -1,15 +1,22 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family:'Josefin Sans';
+    
 }
+
 
 input:focus, textarea:focus, select:focus{
     outline: none;
 }
 
 body {
+    
     width: 100%;
     height: 100%;
+    background-color:  hsla(0, 36%, 70%, 0.2)
+    
 }
 
 .container {
@@ -21,75 +28,133 @@ body {
 }
 
 .card {
-    width: 80%;
+    box-shadow: 2px 2px 20px 2px rgba(0, 0, 0, .2);
+    
+    width: 70%;
     height: 80%;
     display: grid;
     grid-template-columns: 1.5fr 1fr;
 }
 
 .card-body {
+    
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    background-color:#FFF6F5
 }
 
 .card-logo {
     margin: 2rem;
-    padding-bottom: 5rem;
     width: 400px;
+    display: flex;
+    margin-bottom: 4rem;
+    align-items: flex-end;
+    flex-direction: row;
+    
+    
     
 }
 
+.card-image img {
+    width: 150px;
+    padding-top: 30px;
+}
+
+.card-image {
+    margin-bottom: 50px;
+}
+
+
 .title {
     width: 400px;
-    margin: 1rem;
     padding-bottom: 2rem;
 }
 
+
+
 h1 {
-    font-size: 50px;
+    font-weight: 600;
+    font-size:60px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    line-height: 2.5rem;
-    letter-spacing: 10px;
+    line-height: 4rem;
+    letter-spacing:17px;
     text-transform: uppercase;
+    color: hsl(0, 6%, 24%);
 
+}
+
+.title h1 span:nth-last-child(2) {
+    color: #CFA7A9;
+    font-weight: 300;
+    
+    
 }
 
 .card-body p {
     width: 400px;
+    color: #CFA7A9;
+    line-height: 25px;
+    font-size: 16px;
+
 }
 
 .body-letters {
     padding-bottom: 2rem;
 }
 
+/* HEREEEEEEEEE */
 .card-input  {
-    height: 2rem;
+    height: 3rem;
     width: 400px;
-    border: 1px solid black;
-    border-radius: 5%;
+    position: relative;
+    border: 1px solid hsla(0, 36%, 70%, 0.5);
+    padding: 0px 0px 5px  35px;    
+    border-radius: 30px;
+    background: Linear, 135deg, from hsl(0, 0%, 100%), to hsl(0, 100%, 98%);
 }
 
 .card-input input {
     display: inline-block;
-    height: 99%;
+    height: 50px;
     width: 80%;
     border: none;
+    background-color: transparent;
+    
+}
+.card-input input::placeholder {
+    color: hsla(0, 93%, 68%, 0.2);
+    font-size: 16px;
+    font-weight: bold;
 }
 
 .card-input button {
-    height: 100%;
-    width: 20%;
+    box-shadow: 10px 10px 50px  rgba(240,152,151,0.3);
+    background: linear-gradient(to right, rgba(255,249,249,1) 0%,rgba(255,249,249,1) 0%,rgba(255,249,249,1) 0%,rgba(239,203,203,1) 0%,rgba(240,152,151,1) 72%,rgba(240,152,151,1) 72%,rgba(240,152,151,1) 100%);
+    position: absolute;
+    right: -30px;
+    top: -1px;
+    border: none;
+  color: black;
+  padding: 12px 42px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+  border-radius: 30px;
+    
 }
 
 
 .card-img {
-    border: 1px solid blue;
     background-image: url('./images/hero-desktop.jpg');
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
     background-size: cover;
-    back
+    
 }
